fix timeuse chart overlap issue

--- a/src/timeuse.css
+++ b/src/timeuse.css
@@ -1,5 +1,8 @@
+.time-use-visualization {
+  display: flex;
+}
+
 .timeuse-main {
-  //
   padding: 0px;
   padding-left: 0;
   padding-top: 0;
@@ -7,7 +10,6 @@
 
 .timeuse-sidebar {
   padding-left: 10px;
-  //display: table;
 }
 
 .timeuse-text-area {
@@ -16,7 +18,6 @@
 }
 
 .timeuse-legend {
-  //display: table-cell;
   vertical-align: middle;
   cursor: default;
 }
